--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-1-if.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-1-if.mdx
@@ -356,7 +356,7 @@ That is all the if does.
 
 :::
 
-### if with else
+### If with else
 
 We can add `else` to have a second branch that gets run only when the condition is false. The following code adds an else branch to output a different message when the user enters anything other than "C#".
 
@@ -437,3 +437,11 @@ Review the following images to see how the two if statements work together.
 Notice how the one statement in the **else** branch can be an **if statement**. When the else is skipped, that means this if statement is skipped.
 
 :::
+
+### Reading code
+
+The image sequences above should give you an idea of how to go about reading code. You need to be able to read through the code in the way it will run. Picturing certain values within your variables to see the actions that occur as a result.
+
+In general, you should be able to approach this in blocks. This is why it is important to have these blocks flow into each other in a consistent way.
+
+Notice that the "Great Chat" message was always output - this is the statement **after** the if statement. So the if statement sits within a sequence - controlling things within its code but still working in the original sequence. It has one entry, where it starts, and one exit.
